<resources>
    <string name="app_name">MyApplication</string>
    <string name="title_analysis">analysis</string>
    <string name="title_result">result</string>
    <string name="title_files">files</string>
    <string name="Connect">connect</string>
    <string name="StartTest">start</string>
    <string name="saveFile">save</string>
    <string name="fileName">TextView</string>
    <string name="excelImage">excel</string>
    <string name="rename">rename</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="rename_title">Please input new name</string>
    <string name="confirm">confirm</string>
    <string name="add">add</string>
    <string name="result">result</string>
    <string name="x1">x1</string>
    <string name="y1">y1</string>
    <string name="x2">x2</string>
    <string name="y2">y2</string>
    <string name="linearfit">linearfit</string>
    <string name="start_point">start point</string>
    <string name="end_point">end point</string>
    <string name="LinearFit">linear fit</string>
    <string name="linefit_a">a</string>
    <string name="linefit_b">b</string>
    <string name="name">Name</string>
    <string name="x0">x0</string>
    <string name="x">x</string>

</resources>